--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.excilys.android.formation.myapp">
-    
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <!--<uses-permission android:name="android.permission.READ_SMS" />-->
+
+
+    <receiver class="com.excilys.android.formation.myapp.SMSReceiver"
+        android:name="com.excilys.android.formation.myapp.SMSReceiver">
+        <intent-filter android:priority="100">
+            <action android:name="android.provider.Telephony.Sms.Intents.SMS_RECEIVED_ACTION" />
+        </intent-filter>
+    </receiver>
 
     <application
         android:allowBackup="true"
